--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -11,3 +11,8 @@ jobs:
           node-version: '14'
       - run: npm install -g bats
       - run: bats -v
+  check-java-version:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-java@v3
+      - run: java -version
