--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -11,10 +11,14 @@ jobs:
           node-version: '14'
       - run: npm install -g bats
       - run: bats -v
-  check-java-version:
+  hello-java-21:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-      - run: java -version
+          version: '21'
+      - run: javac --release 21 --enable-preview HelloWorld.java
+      - run: java --enable-preview HelloWorld
+
