fix: input is java-version, not version

--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          version: '21'
+          java-version: '21'
       - run: javac --release 21 --enable-preview HelloWorld.java
       - run: java --enable-preview HelloWorld
 
