feat: group scripts in a single run

--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '21'
-      - run: javac --release 21 --enable-preview HelloWorld.java
-      - run: java --enable-preview HelloWorld
+      - run: |
+        javac --release 21 --enable-preview HelloWorld.java
+        java --enable-preview HelloWorld
 
