--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -14,12 +14,15 @@ jobs:
   hello-java-21:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v3
+      - name: Check out the repository
+        uses: actions/checkout@v4
+      - name: Install Java JDK 21
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '21'
-      - run: |
+      - name: Run Hello World!
+        run: |
         javac --release 21 --enable-preview HelloWorld.java
         java --enable-preview HelloWorld
 
